--- a/css/login.css
+++ b/css/login.css
@@ -1,13 +1,119 @@
-body {
+@charset "utf-8";
+/***
+    The new CSS reset - version 1.8.5 (last updated 14.6.2023)
+    GitHub page: https://github.com/elad2412/the-new-css-reset
+***/
+
+/*
+    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
+    - The "symbol *" part is to solve Firefox SVG sprite bug
+    - The "html" attribute is exclud, because otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
+ */
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+    all: unset;
+    display: revert;
+}
+
+/* Preferred box-sizing value */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* Reapply the pointer cursor for anchor tags */
+a, button {
+    cursor: revert;
+}
+
+/* Remove list styles (bullets/numbers) */
+ol, ul, menu {
+    list-style: none;
+}
+
+/* For images to not be able to exceed their container */
+img {
+    max-inline-size: 100%;
+    max-block-size: 100%;
+}
+
+/* removes spacing between cells in tables */
+table {
+    border-collapse: collapse;
+}
+
+/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
+input, textarea {
+    -webkit-user-select: auto;
+}
+
+/* revert the 'white-space' property for textarea elements on Safari */
+textarea {
+    white-space: revert;
+}
+
+/* minimum style to allow to style meter element */
+meter {
+    -webkit-appearance: revert;
+    appearance: revert;
+}
+
+/* preformatted text - use only for this feature */
+:where(pre) {
+    all: revert;
+}
+
+/* reset default text opacity of input placeholder */
+::placeholder {
+    color: unset;
+}
+
+/* remove default dot (•) sign */
+::marker {
+    content: initial;
+}
+
+/* fix the feature of 'hidden' attribute.
+   display:revert; revert to element instead of attribute */
+:where([hidden]) {
+    display: none;
+}
+
+/* revert for bug in Chromium browsers
+   - fix for the content editable attribute will work properly.
+   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element */
+:where([contenteditable]:not([contenteditable="false"])) {
+    -moz-user-modify: read-write;
+    -webkit-user-modify: read-write;
+    overflow-wrap: break-word;
+    -webkit-line-break: after-white-space;
+    -webkit-user-select: auto;
+}
+
+/* apply back the draggable feature - exist only in Chromium and Safari */
+:where([draggable="true"]) {
+    -webkit-user-drag: element;
+}
+
+/* Revert Modal native behavior */
+:where(dialog:modal) {
+    all: revert;
+}
+
+html #loginBody{
     background: url("../Images/karsten-wurth-lsJ9jHKIqHg-unsplash.jpg") no-repeat center fixed;
     background-size: cover;
-    
+}
+
+html #homepageBody {
+    background: url("../Images/dan-meyers-w6X7XaolqA0-unsplash.jpg") no-repeat center fixed;
+    background-size: cover;
 }
 
 .loginHeader {
     text-align: center;
-    margin-top: 13vw;
-    margin-bottom: 1vw;
+    margin-top: 26vh;
+    margin-bottom: 2vh;
 }
 
 .loginHeader h1 {
@@ -44,7 +150,7 @@ body {
 }
 
 .loginInputContainer {
-    margin: 1vw;
+    margin: 20px;
 }
 
 .loginInputContainer label {
@@ -53,19 +159,26 @@ body {
     font-weight: bold;
     font-size: 25px;
     font-family: Arial, Helvetica, sans-serif;
+    text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000,
+				-1px -1px 0 #000;
 }
 
 .loginInputContainer input {
     height: 30px;
     width: 100%;
-    border: 2px solid black;
-    font-size: 20px;
+    border: 1px solid black;
+    background: white;
+    font-size: 18px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .loginInputContainer ::placeholder {
     font-style: italic;
+    font-size: 15px;
+    color: rgba(0,0,0,0.4);
 }
 
 .loginButtonContainer {
@@ -76,6 +189,8 @@ body {
 
 .loginButtonContainer button {
     font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
     padding: 8px 40px;
     background: white;
     border: none;
